--- a/themes/custom/zeus_theme/templates/page.html.twig
+++ b/themes/custom/zeus_theme/templates/page.html.twig
@@ -1,10 +1,11 @@
 {#
 /**
  * @file
- * Theme override to display a single page.
+ * Zeus's theme implementation to display a single page.
  *
  * The doctype, html, head and body tags are not in this template. Instead they
- * can be found in the html.html.twig template in this directory.
+ * can be found in the html.html.twig template normally located in the
+ * core/modules/system directory.
  *
  * Available variables:
  *
@@ -27,111 +28,100 @@
  *   comment/reply/12345).
  *
  * Regions:
- * - page.secondary_menu: Items for the secondary menu region.
- * - page.branding: Items for the branding region.
- * - page.navigation: Items for the navigation region.
+ * - page.navigation: Items for the header region.
+ * - page.highlighted: Items for the highlighted region.
  * - page.primary_menu: Items for the primary menu region.
+ * - page.secondary_menu: Items for the secondary menu region.
  * - page.featured_top: Items for the featured top region.
- * - page.left_sidebar: Items for the left sidebar
  * - page.content: The main content of the current page.
- * - page.right_sidebar: Items for the right sidebar.
- * - page.featured_bottom_first: Items for the featured bottom first region.
- * - page.featured_bottom_second: Items for the featured bottom second region.
- * - page.featured_bottom_third: Items for the featured bottom third region.
- * - page.featured_bottom: Items for the featured bottom region.
- * - page.footer_top: Items for the footer top region.
- * - page.footer_first: Items for the footer first region.
- * - page.footer_second: Items for the footer second region.
- * - page.footer_third: Items for the footer third region.
- * - page.footer_fourth: Items for the footer fourth region.
- * - page.footer_bottom: Items for the footer bottom region.
+ * - page.left_sidebar: Items for the first sidebar.
+ * - page.right_sidebar: Items for the second sidebar.
+ * - page.featured_bottom_first: Items for the first featured bottom region.
+ * - page.featured_bottom_second: Items for the second featured bottom region.
+ * - page.featured_bottom_third: Items for the third featured bottom region.
+ * - page.featured_bottom: Items for featured bottom region.
+ * - page.footer_first: Items for the first footer column.
+ * - page.footer_second: Items for the second footer column.
+ * - page.footer_third: Items for the third footer column.
+ * - page.footer_fourth: Items for the fourth footer column.
+ * - page.footer_fifth: Items for the fifth footer column.
+ *
  * @see template_preprocess_page()
  * @see html.html.twig
  */
 #}
-<div class="layout-container">
-
-  {{ page.secondary_menu }}
-  {{ page.branding }}
-
-  {% if page.main_navigation %}
-    {{ page.main_navigation }}
-  {% endif %}
-
-  {{ page.primary_menu }}
-
-  {{ page.featured_top }}
-
-  <main role="main">
-    <a id="main-content" tabindex="-1"></a>{# link is in html.html.twig #}
-
+  <div id="page">
+    <header id="header" class="header" role="banner" aria-label="{{ 'Site header'|t }}">
+      {% if page.secondary_menu %}
+        <div class="secondary_menu">
+          {{ page.secondary_menu }}
+        </div>
+      {% endif %}
+      {% if page.branding or page.navigation %}
+        <div class="header__branding">
+          <div class="header__branding__logo">
+            {{ page.branding }}
+          </div>
+          <div class="header__branding__navigation">
+            {{ page.navigation }}
+          </div>
+        </div>
+    {% endif %}
+    {% if page.primary_menu %}
+      <div class="primary_menu">
+        {{ page.primary_menu }}
+      </div>
+    {% endif %}    
+    </header>
+    {% if page.featured_top %}
+        <section class="featured-top" id="featured-top" role="complementary">
+          {{ page.featured_top }}
+        </section>
+    {% endif %}
+    <div class="main" id="main">
     {% if page.left_sidebar %}
-      <aside class="layout-left_sidebar" role="complementary">
+      <aside class="main_sidebar-left" id="sidebar-left" role="complementary">
         {{ page.left_sidebar }}
       </aside>
     {% endif %}
-
-    <div class="layout-content">
-      {{ page.content }}
-    </div>{# /.layout-content #}
-
+    <main class="main__content" id="content" role="main">
+      <section class="main__content__section">
+        <a id="main-content" tabindex="-1"></a>
+          {{ page.content }}
+      </section>
+    </main>
     {% if page.right_sidebar %}
-      <aside class="layout-right_sidebar" role="complementary">
+      <aside class="main_sidebar-right" id="sidebar-right" role="complementary">
         {{ page.right_sidebar }}
       </aside>
+    {% endif %}    
+    </div>
+    {% if page.featured_bottom_first or page.featured_bottom_second or page.featured_bottom_third %}
+        <section class="layout-container clearfix" role="complementary">
+          {{ page.featured_bottom_first }}
+          {{ page.featured_bottom_second }}
+         {{ page.featured_bottom_third }}
+      </div>
     {% endif %}
-
-    {% if page.featured_bottom_first %}
-        {{ page.featured_bottom_first }}
-    {% endif %}
-
-    {% if page.featured_bottom_second %}
-        {{ page.featured_bottom_second }}
-    {% endif %}
-
-    {% if page.featured_bottom_third %}
-        {{ page.featured_bottom_third }}
-    {% endif %}
-
     {% if page.featured_bottom %}
-        {{ page.featured_bottom }}
-    {% endif %}
-  </main>
-
-  {% if page.footer_top %}
-    <footer role="contentinfo">
-      {{ page.footer_top }}
+        <section class="featured-bottom" id="featured-bottom" role="complementary">
+          {{ page.featured_bottom }}
+        </section>
+    {% endif %}    
+    <footer class="footer" id="footer">
+        {% if page.footer_first or page.footer_second or page.footer_third or page.footer_fourth %}
+          <div class="footer__top clearfix">
+            {{ page.footer_first }}
+            {{ page.footer_second }}
+            {{ page.footer_third }}
+            {{ page.footer_fourth }}
+            </div>
+        {% endif %}
+        {% if page.footer_bottom %}
+          <div class="footer__bottom">
+            {{ page.footer_bottom }}
+          </div>
+        {% endif %}
+      </div>
     </footer>
-  {% endif %}
-
-  {% if page.footer_first %}
-    <footer role="contentinfo">
-      {{ page.footer_first }}
-    </footer>
-  {% endif %}
-
-  {% if page.footer_second %}
-    <footer role="contentinfo">
-      {{ page.footer_second }}
-    </footer>
-  {% endif %}
-
-  {% if page.footer_third %}
-    <footer role="contentinfo">
-      {{ page.footer_third }}
-    </footer>
-  {% endif %}
-
-  {% if page.footer_fourth %}
-    <footer role="contentinfo">
-      {{ page.footer_fourth }}
-    </footer>
-  {% endif %}
-
-  {% if page.footer_bottom %}
-    <footer role="contentinfo">
-      {{ page.footer_bottom }}
-    </footer>
-  {% endif %}
-
-</div>{# /.layout-container #}
+  </div>
